fea-rs/test-data/compile-tests/mini-latin/bad/gsub_6_inline_class.fea
feature test {
    # replace by class only accepts single input
    sub a' [b c]' d by [z x];
} test;

