fea-rs/test-data/compile-tests/mini-latin/bad/gsub_6_inline_class.ERR
error: if replacing by glyph class, input sequence must be a single glyph class
in ./test-data/compile-tests/mini-latin/bad/gsub_6_inline_class.fea at 3:8
  | 
3 |     sub a' [b c]' d by [z x];
  |         ^^^^^^^^^^
